# CvCoreTypes

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  CvCoreTypesConfig.cmake.in
src/Components/: CMakeLists.txt
src/Components/CameraInfoProvider/: CMakeLists.txt  CameraInfoProvider.cpp  CameraInfoProvider.hpp
src/Components/HomogenousMatrixProvider/: CMakeLists.txt  HomogenousMatrixProvider.cpp  HomogenousMatrixProvider.hpp
src/Components/HomogenousMatrixSequence/: CMakeLists.txt  CMakeLists.txt~  HomogenousMatrixSequence.cpp  HomogenousMatrixSequence.hpp  Sequence.cpp~  Sequence.hpp~
src/Types/: CMakeLists.txt  CameraInfo.hpp  HomogMatrix.hpp  KeyPoints.hpp  MatrixTranslator.hpp  MatrixTranslator_test.cpp
tasks/: task.xml
